implemented sharing of documents, edit mode, cleanup

--- a/src/components/layouts/fileView/renderer/styles.module.scss
+++ b/src/components/layouts/fileView/renderer/styles.module.scss
@@ -626,12 +626,6 @@ $size: $iconSmallSize;
         height: $iconSmallSize;
         margin-bottom: auto;
     }
-
-    .modifierChoiceItem {
-        display: grid;
-        grid-template-columns: minmax(0, 1fr) auto;
-        font-size: small;
-    }
 }
 
 .dropdown {
@@ -641,6 +635,7 @@ $size: $iconSmallSize;
 
 .dropdownItem {
     @include fontNoLineBreak;
+    display: inline-flex;
     font-size: small;
     align-items: center;
     height: $size !important;
@@ -774,50 +769,23 @@ $size: $iconSmallSize;
 
 .namePlate {
     display: grid;
-    grid-template-columns: 60px 1fr $iconSmallSize + 5px;
+    grid-template-columns: 60px 1fr auto;
     grid-template-rows: 60px 1fr;
     gap: 3px;
+    width: 100%;
+    overflow: hidden;
 }
 
 .restPanel {
     display: grid;
     height: 100%;
     gap: 3px;
-}
 
-.shortRestSidePanel {
-    padding: 5px;
-
-    & > .shortRestRecoverChargesHolder {
-        @include colorDecoration(second);
-        display: grid;
-        gap: 5px;
-        margin-bottom: 5px;
-
-        & > div {
-            display: flex;
-            align-items: center;
-            padding: 5px;
-
-            & > span {
-                margin-right: 5px;
-            }
-
-            &:not(:has(div)){
-                display: none;
-            }
-        }
-    }
-
-    & > button {
-        width: 100%;
-        height: $iconSmallSize;
-
-        &:not(:last-child) {
-            margin-bottom: 5px;
-        }
+    svg {
+        margin: 4px;
     }
 }
+
 
 .upcastGroup {
     display: inline-flex;
