--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -14,8 +14,8 @@ $palette: (
     cla: var(--color-cla),
     cre: var(--color-cre),
     doc: var(--color-doc),
-    enc: var(--color-enc),
     spe: var(--color-spe),
+    rce: var(--color-rce),
     ite: var(--color-ite),
 
     syntax-function-name: var(--color-syntax-function-name),
