--- a/src/components/layouts/fileView/editor/style.module.scss
+++ b/src/components/layouts/fileView/editor/style.module.scss
@@ -180,6 +180,9 @@ $sizeExtra: ($size + 1px) * 8 - 1px;
 
 .dropdownItem {
     @include fontNoLineBreak;
+    display: inline-flex;
+    font-size: small;
+    align-items: center;
     height: $size !important;
 }
 
