--- a/src/styles/pages/stories.module.scss
+++ b/src/styles/pages/stories.module.scss
@@ -4,9 +4,6 @@
 @import 'styles/constants.scss';
 
 .view {
-    display: grid;
-    grid-template-rows: $pageHeaderHeight 1fr;
-    grid-template-columns: minmax(0, 1fr);
     gap: 10px;
     width: 100%;
     height: 100%;
@@ -17,11 +14,15 @@
     display: grid;
     overflow: auto;
     grid-template-columns: repeat(auto-fill, minmax($smallMenuWidth, 1fr));
-    grid-template-rows: repeat(auto-fill, $smallMenuHeight);
     grid-gap: 10px;
     padding: 10px;
 
     @include mobile {
         grid-template-columns: minmax(0, 1fr);
     }
+
+    & > * {
+        height: $smallMenuHeight;
+    }
 }
+
