Improvements to how scaling/condition properties are handled.

--- a/src/components/views/renderer/styles.module.scss
+++ b/src/components/views/renderer/styles.module.scss
@@ -604,6 +604,8 @@ $size: $iconSmallSize;
 }
 
 .dropdown {
+    display: flex;
+    align-items: center;
     font: inherit;
     font-size: small;
     height: $size !important;
