--- a/src/components/elements/styles.module.scss
+++ b/src/components/elements/styles.module.scss
@@ -206,6 +206,11 @@
     font-size: large;
 }
 
+.header4 {
+    @extend .header;
+    font-size: medium;
+}
+
 .errorText {
     color: color(error);
 }
