--- a/src/components/views/editor/style.module.scss
+++ b/src/components/views/editor/style.module.scss
@@ -174,6 +174,8 @@ $sizeExtra: ($size + 1px) * 8 - 1px;
 }
 
 .dropdown {
+    display: flex;
+    align-items: center;
     font: inherit;
     font-size: small !important;
     height: $size !important;
@@ -214,6 +216,18 @@ $sizeExtra: ($size + 1px) * 8 - 1px;
     @extend .editGroupItem;
     margin: 0;
     align-items: center;
+    height: $iconSmallSize;
+}
+
+.itemRecordItem {
+    @extend .editGroupItem;
+    margin: 0;
+    align-items: center;
+    height: $iconSmallSize;
+
+    & > input, select {
+        height: 100%;
+    }
 }
 
 .itemListItem {
