Implemented conditions and improved typing

--- a/src/components/views/renderer/styles.module.scss
+++ b/src/components/views/renderer/styles.module.scss
@@ -405,10 +405,18 @@ $size: $iconSmallSize;
     & > b:first-child { align-self: center; }
 }
 
+.proficiencyBox {
+    @extend .sheetBox;
+    border-radius: 15px;
+    max-width: 65px;
+    & > b { align-self: center; }
+    & > span { width: 100%; }
+}
+
 .initiativeBox {
     @extend .sheetBox;
     border-radius: 15px;
-    max-width: 70px;
+    max-width: 65px;
 
     & > b { align-self: center; }
     & > span { width: 100%; }
@@ -467,27 +475,35 @@ $size: $iconSmallSize;
     }
 }
 
-.proficiencyBox {
-    @extend .sheetBox;
-    max-width: 16.5%;
-    border-radius: 15px;
-    & > b { align-self: center; }
-    & > span { width: 100%; }
-}
-
 .passivesBox {
     @extend .sheetBox;
-    border-radius: 15px;
     justify-items: left;
-    padding: 0 10px;
     grid-template-columns: 1fr auto;
     grid-template-rows: auto auto auto;
 }
 
 .speedBox {
     @extend .sheetBox;
-    border-radius: 15px;
-    max-width: 33%;
+    display: block;
+    text-align: center;
+    max-width: 140px;
+}
+
+.defensesBox {
+    @extend .sheetBox;
+    display: block;
+    height: 60px;
+
+    & > b {
+        display: block;
+    }
+
+    & > span {
+        display: inline-flex;
+        & > svg {
+            height: 1ch !important;
+        }
+    }
 }
 
 .pageSelector {
@@ -512,18 +528,13 @@ $size: $iconSmallSize;
 
 .skillTable {
     @extend .sheetBox;
-    border-radius: 15px;
-    font-family: $fontNormal;
+    font-size: small;
     & > div {
         display: grid;
-        grid-template-columns: auto 10px minmax(0, 1fr) $iconSmallSize * 2 55px;
+        grid-template-columns: 0.8cm 10px minmax(0, 1fr) $iconSmallSize * 2 55px;
         gap: 5px;
         height: $iconSmallSize;
         width: 100%;
-
-        & > .label {
-            font-family: $fontDocument;
-        }
 
         & > .proficiencyMarker {
             @include colorBorder(document);
@@ -552,10 +563,8 @@ $size: $iconSmallSize;
         }
 
         & > *:last-child {
-            text-align: center;
             justify-self: center;
             align-self: center;
-            height: fit-content;
         }
     }
 
