Home page fixes, condition error fix, and added "Hide rolls" option to settings page.

--- a/src/components/controls/appBar/style.module.scss
+++ b/src/components/controls/appBar/style.module.scss
@@ -6,6 +6,7 @@
 .main {
     @include colorWithShadow(main);
     display: flex;
+    position: sticky;
     flex-direction: row-reverse;
     height: $pageHeaderHeight;
     gap: 1px;
