--- a/src/components/controls/cards/style.module.scss
+++ b/src/components/controls/cards/style.module.scss
@@ -3,7 +3,7 @@
 @import 'styles/prefabs.scss';
 @import 'styles/constants.scss';
 
-$iconPadding: 3px;
+$iconPadding: 2px;
 
 .card {
     @include colorInteractiveInnerControl;
@@ -34,48 +34,28 @@ $iconPadding: 3px;
 
 .description {
     overflow: hidden;
-    padding: 10px 10px 2 * $iconPadding + $iconNormalSize 10px;
+    padding: 10px;
+    height: 80px;
 
     & > div {
+        display: -webkit-box;
         overflow: hidden;
-        white-space: normal;
-        text-overflow: ellipsis;
-        height: 100%;
+        line-clamp: 3;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
     }
 }
 
-.date {
-    position: absolute;
-    user-select: none;
-    overflow: hidden;
-    height: 20px;
-    bottom: $iconPadding;
-    right: $iconPadding;
-}
+.bottomBar {
+    display: flex;
+    height: $iconNormalSize + $iconPadding;
+    align-items: center;
+    gap: 2 * $iconPadding;
+    margin: $iconPadding $iconPadding + 5px;
 
-.icon {
-    position: absolute;
-    width: $iconNormalSize;
-    height: $iconNormalSize;
-    padding: $iconPadding;
-    bottom: $iconPadding;
-    border-radius: 50%;
-    user-select: none;
-
-    & > svg {
-        width: 100%;
-        height: 100%;
+    & > * {
+        user-select: none;
     }
-}
-
-.delete {
-    @extend .icon;
-    left: $iconPadding;
-}
-
-.edit {
-    @extend .icon;
-    left: $iconNormalSize + 2 * $iconPadding;
 }
 
 .confirmationDialog {
