--- a/src/components/controls/fileSystem/style.module.scss
+++ b/src/components/controls/fileSystem/style.module.scss
@@ -56,6 +56,7 @@
     position: absolute;
     left: 100%;
     margin-left: 5px;
+    width: max-content;
 }
 
 .fileFilterMenuHeader {
@@ -65,14 +66,11 @@
     text-indent: 10px;
 }
 
-.fileFilterMenuItem {
-    @include colorFileByType;
-    @include fontNoLineBreak;
+.fileFilterMenuContent {
     display: grid;
-    grid-template-columns: auto auto 1fr;
+    grid-template-columns: auto auto minmax(0, 1fr);
     gap: 2px;
     margin: 2px;
     align-items: center;
-    height: $iconSmallSize;
 }
 
