--- a/src/components/controls/menus/template.module.scss
+++ b/src/components/controls/menus/template.module.scss
@@ -3,8 +3,6 @@
 @import 'styles/prefabs.scss';
 @import 'styles/fonts.scss';
 
-$size: 20px;
-
 .main {
     @include colorBackground(input);
     display: flex;
@@ -61,7 +59,7 @@ $size: 20px;
 .inputRow {
     display: grid;
     grid-template-columns: $labelWidth minmax(0, 1fr);
-    max-height: $size;
+    max-height: min-content;
 
     & > b {
         @include fontNoLineBreak;
@@ -74,7 +72,7 @@ $size: 20px;
     display: grid;
     grid-template-columns: minmax(0, 1fr) auto auto auto;
     direction: ltr;
-    height: $iconSmallSize;
+    height: min-content;
     align-items: center;
     background-color: inherit;
     align-items: stretch;
@@ -103,20 +101,6 @@ $size: 20px;
         max-width: $smallButtonWidth;
         min-width: $smallButtonWidth;
         flex: 1;
-    }
-}
-
-.button {
-    aspect-ratio: 1;
-    padding: 2px;
-    user-select: none;
-    height: $size;
-    width: $size;
-    text-indent: 0;
-
-    & > svg {
-        width: 100%;
-        height: 100%;
     }
 }
 
