--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -87,6 +87,14 @@
     overflow-y: auto;
 }
 
+.color-by-type {
+    @include colorByType;
+}
+
+.color-by-rarity {
+    @include colorByRarity;
+}
+
 .z-0 { z-index: 0 !important; }
 .z-1 { z-index: 1 !important; }
 .z-2 { z-index: 2 !important; }
