Multiple minor improvements Improved settings menu styling, Added option to disable editor line numbers. Added option to change editor font size. Changed editor font. Fixed loading icon not being centered in stories page.

--- a/src/components/controls/dropdownMenu/style.module.scss
+++ b/src/components/controls/dropdownMenu/style.module.scss
@@ -1,7 +1,7 @@
 @import 'styles/colors.scss';
 @import 'styles/prefabs.scss';
 
-.dropdown {
+select {
     @include colorBackground(input);
     @include colorInteractiveControl;
     @include scroll;
@@ -10,4 +10,3 @@
     font: inherit;
     cursor: pointer;
 }
-
