--- a/src/components/views/editor/style.module.scss
+++ b/src/components/views/editor/style.module.scss
@@ -8,6 +8,20 @@ $bottomMargin: 30ch;
 $sizeLarge: ($size + 1px) * 5 - 1px;
 $sizeExtra: ($size + 1px) * 8 - 1px;
 
+@mixin editorFont {
+    @include desktop {
+        font-size: 12px !important;
+    }
+
+    @include mobile {
+        font-size: 11px !important;
+    }
+
+    @include mobile-landscape {
+        font-size: 11px !important;
+    }
+}
+
 .main {
     @include colorBackground(document);
     @include scroll;
@@ -95,38 +109,25 @@ $sizeExtra: ($size + 1px) * 8 - 1px;
     }
 
     & > *:first-child {
+        @include editorFont;
         height: $size;
         flex-shrink: 0;
         display: flex;
         align-items: center;
         white-space: nowrap;
         user-select: none;
-
-        @include desktop {
-            font-size: 12px;
-        }
-
-        @include mobile {
-            font-size: 11px;
-        }
-
-        @include mobile-landscape {
-            font-size: 11px;
-        }
     }
 }
 
 .editInput {
     @include colorBackground(input);
+    @include editorFont;
     min-width: 0;
     border: none;
     outline: none;
     font: inherit;
-    font-size: small;
-    text-indent: 3px;
     width: 100%;
     height: 100%;
-    padding-left: 3px;
 
     &[error=true] {
         color: color(error);
@@ -174,19 +175,19 @@ $sizeExtra: ($size + 1px) * 8 - 1px;
 }
 
 .dropdown {
+    @include editorFont;
     display: flex;
     align-items: center;
     font: inherit;
-    font-size: small !important;
     height: $size !important;
 }
 
 .editList {
     @extend .editGroupItem;
+    @include editorFont;
     height: $sizeLarge;
     flex-shrink: 0;
     font: inherit;
-    font-size: small;
 
     &[data=true] {
         height: auto;
@@ -345,34 +346,23 @@ $sizeExtra: ($size + 1px) * 8 - 1px;
     }
 
     & > *:first-child {
+        @include editorFont;
         height: $size;
         flex-shrink: 0;
         display: flex;
         align-items: center;
         white-space: nowrap;
         user-select: none;
-
-        @include desktop {
-            font-size: 12px;
-        }
-
-        @include mobile {
-            font-size: 11px;
-        }
-
-        @include mobile-landscape {
-            font-size: 11px;
-        }
     }
 }
 
 .editCondition {
+    @include editorFont;
     @extend .editGroupItem;
     max-height: $sizeLarge + $size;
     height: fit-content;
     flex-shrink: 0;
     font: inherit;
-    font-size: small;
 
     & > div {
         display: flex;
