Fixed problems with images and other issues.

--- a/src/components/elements/styles.module.scss
+++ b/src/components/elements/styles.module.scss
@@ -166,14 +166,16 @@
 .image {
     display: flex;
     width: 100%;
-    height: fit-content;
+    position: relative;
+
+    & > img {
+        position: unset !important;
+    }
 
     &[data=true] {
         @include colorBorder(second);
         border: 2px solid;
     }
-
-    & > img { width: 100%; }
 }
 
 .header {
