--- a/src/components/views/editStory/style.module.scss
+++ b/src/components/views/editStory/style.module.scss
@@ -47,6 +47,7 @@
 
     & > img {
         grid-column: 2;
+        position: unset !important;
         height: $menuItemHeaderHeight * 4;
         max-height: $menuItemHeaderHeight * 4;
         max-width: 100%;
