--- a/src/components/controls/dropdownMenu/style.module.scss
+++ b/src/components/controls/dropdownMenu/style.module.scss
@@ -1,5 +1,5 @@
-@import 'styles/colors.scss';
-@import 'styles/prefabs.scss';
+@use 'colors.scss' as *;
+@use 'prefabs.scss' as *;
 
 select {
     @include colorBackground(input);
