--- a/src/components/controls/fileSystem/style.module.scss
+++ b/src/components/controls/fileSystem/style.module.scss
@@ -1,6 +1,7 @@
-@import 'styles/colors.scss';
-@import 'styles/fonts.scss';
-@import 'styles/prefabs.scss';
+@use 'colors.scss' as *;
+@use 'constants.scss' as *;
+@use 'fonts.scss' as *;
+@use 'prefabs.scss' as *;
 
 .main {
     @include colorDecoration(second);
