--- a/src/components/elements/styles.module.scss
+++ b/src/components/elements/styles.module.scss
@@ -1,7 +1,7 @@
-@import 'styles/colors.scss';
-@import 'styles/fonts.scss';
-@import 'styles/constants.scss';
-@import 'styles/prefabs.scss';
+@use 'colors.scss' as *;
+@use 'fonts.scss' as *;
+@use 'constants.scss' as *;
+@use 'prefabs.scss' as *;
 
 @mixin fontExtension {
     font-weight: bold;
