--- a/src/components/views/editor/style.module.scss
+++ b/src/components/views/editor/style.module.scss
@@ -1,7 +1,7 @@
-@import 'styles/colors.scss';
-@import 'styles/prefabs.scss';
-@import 'styles/fonts.scss';
-@import 'styles/constants.scss';
+@use 'colors.scss' as *;
+@use 'prefabs.scss' as *;
+@use 'fonts.scss' as *;
+@use 'constants.scss' as *;
 
 $size: $iconSmallSize;
 $bottomMargin: 30ch;
