--- a/src/components/views/renderer/styles.module.scss
+++ b/src/components/views/renderer/styles.module.scss
@@ -1,8 +1,8 @@
-@import 'styles/colors.scss';
-@import 'styles/constants.scss';
-@import 'styles/fonts.scss';
-@import 'styles/prefabs.scss';
-@import 'styles/animations.scss';
+@use 'colors.scss' as *;
+@use 'constants.scss' as *;
+@use 'fonts.scss' as *;
+@use 'prefabs.scss' as *;
+@use 'animations.scss' as *;
 
 $size: $iconSmallSize;
 
