--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,7 +1,7 @@
-@import 'styles/fonts.scss';
-@import 'styles/colors.scss';
-@import 'styles/constants.scss';
-@import 'styles/prefabs.scss';
+@use 'fonts.scss' as *;
+@use 'colors.scss' as *;
+@use 'constants.scss' as *;
+@use 'prefabs.scss' as *;
 
 html {
     height: 100vh;
