Fixed file select dialog header being wider than dialog background

--- a/src/components/dialogs/style.module.scss
+++ b/src/components/dialogs/style.module.scss
@@ -57,7 +57,8 @@
 .dialogHeaderWithButtons {
     @include colorWithShadow('main');
     display: grid;
-    grid-template-columns: minmax(0, auto) minmax(0, 1fr) auto auto;
+    grid-template-columns: minmax(0, auto) minmax(0, 1fr) $menuItemHeaderHeight $menuItemHeaderHeight;
+    grid-template-rows: 100%;
     height: $menuItemHeaderHeight;
     gap: 2px;
 }
