Replaced sass map-get with new map.get

--- a/src/components/elements/styles.module.scss
+++ b/src/components/elements/styles.module.scss
@@ -1,3 +1,4 @@
+@use "sass:map";
 @use 'colors.scss' as *;
 @use 'fonts.scss' as *;
 @use 'constants.scss' as *;
@@ -186,7 +187,7 @@
     align-items: center;
 
     &[data=true] {
-        border-bottom: 2px solid map-get($palette, border);
+        border-bottom: 2px solid map.get($palette, border);
         margin-bottom: 6px;
     }
 }
